fixed up the alignment issues

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -350,7 +350,7 @@ table td, table th { padding: 5px; }
 }
 
 .modal-jumbos {
-	min-height: 500px;
+	min-height: 550px;
 }
 
 .founder-jumbos {
